--- a/BaagiTech-TimeSheet/Src/Time Sheet.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Time Sheet.fx.yaml
@@ -1,18 +1,7 @@
 "'Time Sheet' As screen":
 
     "'Screen Background_3' As 'Screen Background'":
-        HeaderTitle: =Gallery2.Selected.Name
-
-    gal_TimeSheet_MenuTab As gallery.galleryHorizontal:
-        DelayItemLoading: =true
-        Height: =100
-        Items: =Col_Tabs
-        LoadingSpinner: =LoadingSpinner.Data
-        TemplateSize: =437
-        Width: =1343
-        X: =23
-        Y: =80
-        ZIndex: =1
+        HeaderTitle: =Gallery2_4.Selected.Name
 
     lbl_TimeSheet_Date As label:
         Font: =Font.Georgia
@@ -51,54 +40,6 @@
         X: =48
         Y: =254
         ZIndex: =8
-
-    btn_TimeSheet_Submit As button:
-        BorderThickness: =1
-        Color: =RGBA(0, 0, 0, 1)
-        Fill: =RGBA(173, 216, 230, 1)
-        Font: =Font.Georgia
-        OnSelect: |-
-            =Patch(
-                          Timesheet,
-                          Defaults(Timesheet),
-                          {
-                             Date:dte_TimeSheet_Date.SelectedDate,
-                             'Overtime Hours':Value(txt_TimeSheet_OverTimeHours.Text),
-                             Task:txt_TimeSheet_Task.Text,
-                             'Total Hours':Value(txt_TimeSheet_TotalHours.Text),
-                             'Regular Hours':Value(txt_TimeSheet_RegularHours.Text),
-                             'Employee Email':User().Email,
-                             'Period Start  Date':dte_TimeSheet_PeriodStartDate.SelectedDate,
-                             'Period End Date':dte_TimeSheet_PeriodEndDate.SelectedDate
-                          }
-                      )
-            ;
-            Refresh(Timesheet)
-        RadiusBottomLeft: =13
-        RadiusBottomRight: =13
-        RadiusTopLeft: =13
-        RadiusTopRight: =13
-        Text: ="Submit"
-        X: =1183
-        Y: =675
-        ZIndex: =8
-
-    btn_TimeSheet_Header As button:
-        BorderStyle: =BorderStyle.None
-        BorderThickness: =0
-        Color: =RGBA(0, 0, 0, 1)
-        Fill: =RGBA(173, 216, 230, 1)
-        Font: =Font.Georgia
-        Height: =69
-        HoverColor: =RGBA(0, 0, 0, 1)
-        HoverFill: =RGBA(173, 216, 230, 1)
-        PressedFill: =RGBA(173, 216, 230, 1)
-        Size: =40
-        Text: ="Time Sheet"
-        Width: =1343
-        X: =12
-        Y: =11
-        ZIndex: =9
 
     lbl_TimeSheet_PeriodEndDate As label:
         Font: =Font.Georgia
@@ -160,8 +101,8 @@
         Text: |-
             ="Total Hours:"
         Width: =198
-        X: =947
-        Y: =213
+        X: =1009
+        Y: =214
         ZIndex: =17
 
     txt_TimeSheet_Task As text:
@@ -170,13 +111,14 @@
         Height: =121
         Mode: =TextMode.MultiLine
         Width: =1137
-        X: =48
-        Y: =540
+        X: =46
+        Y: =444
         ZIndex: =17
 
     txt_TimeSheet_RegularHours As text:
         BorderColor: =RGBA(173, 216, 230, 1)
         Default: =8
+        DisplayMode: =DisplayMode.Disabled
         Width: =328
         X: =48
         Y: =339
@@ -185,6 +127,7 @@
     txt_TimeSheet_OverTimeHours As text:
         BorderColor: =RGBA(173, 216, 230, 1)
         Default: =
+        DisplayMode: =DisplayMode.Disabled
         Width: =319
         X: =438
         Y: =339
@@ -194,10 +137,47 @@
         Align: =Align.Center
         BorderColor: =RGBA(173, 216, 230, 1)
         Default: =Sum(Filter(Timesheet,'Employee Email' = User().Email).Hours,Hours)
+        DisplayMode: =DisplayMode.Disabled
         Height: =126
         Size: =30
         Width: =163
-        X: =1039
-        Y: =253
+        X: =1009
+        Y: =257
         ZIndex: =23
+
+    Gallery2_4 As gallery.galleryHorizontal:
+        DelayItemLoading: =true
+        Height: =100
+        Items: =Col_Tabs
+        LoadingSpinner: =LoadingSpinner.Data
+        TemplateSize: =437
+        Width: =1343
+        X: =11
+        Y: =95
+        ZIndex: =24
+
+        Rectangle1_4 As rectangle:
+            Fill: =RGBA(241, 244, 249, 1)
+            Height: =74
+            OnSelect: =Select(Parent)
+            Visible: =varSelectedTab = ThisItem.ID
+            Width: =437
+            Y: =16
+            ZIndex: =1
+
+        Button5_4 As button:
+            BorderThickness: =1
+            Color: =RGBA(0, 0, 0, 1)
+            Fill: =RGBA(173, 216, 230, 1)
+            Font: =Font.Georgia
+            OnSelect: =Navigate(ThisItem.Screen);Select(Parent)
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: =ThisItem.Name
+            Width: =177
+            X: =130
+            Y: =33
+            ZIndex: =2
 
