--- a/BaagiTech-TimeSheet/Src/Time Sheet.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Time Sheet.fx.yaml
@@ -9,15 +9,15 @@
         Size: =16
         Text: |-
             ="Date:"
-        X: =46
-        Y: =575
+        X: =48
+        Y: =396
         ZIndex: =5
 
     dte_TimeSheet_Date As datepicker:
         BorderColor: =RGBA(173, 216, 230, 1)
         IconBackground: =RGBA(173, 216, 230, 1)
-        X: =46
-        Y: =615
+        X: =48
+        Y: =436
         ZIndex: =6
 
     lbl_TimeSheet_PeriodStartDate As label:
@@ -68,8 +68,8 @@
         Size: =16
         Text: |-
             ="Task:"
-        X: =46
-        Y: =404
+        X: =48
+        Y: =494
         ZIndex: =11
 
     lbl_TimeSheet_RegularHours As label:
@@ -94,7 +94,7 @@
         Y: =300
         ZIndex: =14
 
-    lbl_TimeSheet_Date_6 As label:
+    lbl_TimeSheet_TotalHours As label:
         Font: =Font.Georgia
         FontWeight: =FontWeight.Semibold
         Size: =16
@@ -110,9 +110,9 @@
         Default: =
         Height: =121
         Mode: =TextMode.MultiLine
-        Width: =1137
-        X: =46
-        Y: =444
+        Width: =1124
+        X: =48
+        Y: =534
         ZIndex: =17
 
     txt_TimeSheet_RegularHours As text:
