--- a/BaagiTech-TimeSheet/Src/Travel Claim.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Travel Claim.fx.yaml
@@ -158,10 +158,6 @@
                 Font: =Font.Georgia
                 Format: =TextFormat.Number
                 PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
                 Size: =16
                 Tooltip: =Parent.DisplayName
                 Width: =Parent.Width - 60
@@ -304,10 +300,6 @@
                 Font: =Font.Georgia
                 Format: =TextFormat.Number
                 PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
                 Tooltip: =Parent.DisplayName
                 Width: =Parent.Width - 60
                 X: =30
@@ -448,10 +440,6 @@
                 Font: =Font.Georgia
                 Format: =TextFormat.Number
                 PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
                 Size: =16
                 Tooltip: =Parent.DisplayName
                 Width: =Parent.Width - 60
@@ -520,10 +508,6 @@
                 DisplayMode: =Parent.DisplayMode
                 Format: =TextFormat.Number
                 PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
                 Tooltip: =Parent.DisplayName
                 Width: =Parent.Width - 60
                 X: =30
@@ -593,10 +577,6 @@
                 Font: =Font.Georgia
                 MaxLength: =Parent.MaxLength
                 PaddingLeft: =5
-                RadiusBottomLeft: =0
-                RadiusBottomRight: =0
-                RadiusTopLeft: =0
-                RadiusTopRight: =0
                 Size: =16
                 Tooltip: =Parent.DisplayName
                 Width: =Parent.Width - 60
@@ -848,7 +828,7 @@
                 Y: =DataCardKey22.Y
                 ZIndex: =4
 
-    btn_TimeSheet_Submit_2 As button:
+    btn_TravelClaim_Submit As button:
         Color: =RGBA(0, 0, 0, 1)
         Fill: =RGBA(173, 216, 230, 1)
         Font: =Font.Georgia
