--- a/BaagiTech-TimeSheet/Src/Manager.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Manager.fx.yaml
@@ -1,4 +1,53 @@
 Manager As screen:
 
-    "'Screen Background_1' As 'Screen Background'":
+    "cmp_Manager_Background As 'Screen Background'":
+
+    btn_Manager_Timesheet As button:
+        Color: =RGBA(0, 0, 0, 1)
+        Fill: =RGBA(173, 216, 230, 1)
+        Font: =Font.Georgia
+        FontWeight: =FontWeight.Bold
+        Height: =73
+        OnSelect: =Navigate('Timesheet Approvals')
+        RadiusBottomLeft: =25
+        RadiusBottomRight: =25
+        RadiusTopLeft: =25
+        RadiusTopRight: =25
+        Text: ="Timesheet Approvals"
+        Width: =415
+        X: =475
+        Y: =198
+        ZIndex: =6
+
+    btn_Manager_Leave As button:
+        Color: =RGBA(0, 0, 0, 1)
+        Fill: =RGBA(173, 216, 230, 1)
+        Font: =Font.Georgia
+        FontWeight: =FontWeight.Bold
+        Height: =73
+        RadiusBottomLeft: =25
+        RadiusBottomRight: =25
+        RadiusTopLeft: =25
+        RadiusTopRight: =25
+        Text: ="Leave Approvals"
+        Width: =415
+        X: =475
+        Y: =347
+        ZIndex: =7
+
+    btn_Manager_TravelClaim As button:
+        Color: =RGBA(0, 0, 0, 1)
+        Fill: =RGBA(173, 216, 230, 1)
+        Font: =Font.Georgia
+        FontWeight: =FontWeight.Bold
+        Height: =73
+        RadiusBottomLeft: =25
+        RadiusBottomRight: =25
+        RadiusTopLeft: =25
+        RadiusTopRight: =25
+        Text: ="Travel Claim Approvals"
+        Width: =415
+        X: =475
+        Y: =492
+        ZIndex: =8
 
