--- a/BaagiTech-TimeSheet/Src/Timesheet Approvals.fx.yaml
+++ b/BaagiTech-TimeSheet/Src/Timesheet Approvals.fx.yaml
@@ -5,7 +5,13 @@
     "gal_TimeSheetApproval_Records As gallery.'BrowseLayout_Vertical_OneTextVariant_ver5.0'":
         DelayItemLoading: =true
         Height: =475
-        Items: =Timesheet
+        Items: |-
+            =//Timesheet
+            /*Search(
+                Timesheet;
+                txt_TimesheetApproval_Search.Text; "EmployeeEmail")*/
+            
+                Search(ivan,txt_TimesheetApproval_Search.Text,"GivenName")
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplatePadding: =0
@@ -23,7 +29,7 @@
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.'Employee Email'
+            Text: =ThisItem.DisplayName
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - 86
             X: =16
@@ -72,4 +78,11 @@
         X: =33
         Y: =120
         ZIndex: =3
+
+    Button1 As button:
+        OnSelect: =ClearCollect(ivan,Office365Users.SearchUser())
+        Text: ="Button"
+        X: =40
+        Y: =40
+        ZIndex: =4
 
