--- a/BaagiTech-TimeSheet/CanvasManifest.json
+++ b/BaagiTech-TimeSheet/CanvasManifest.json
@@ -137,6 +137,7 @@
     "Travel Claim",
     "Manager",
     "Timesheet Approvals",
-    "Timesheet Details Approvals"
+    "Timesheet Details Approvals",
+    "Screen1"
   ]
 }
